--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
-test fdgdz
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
+
+
+<body>
+    <style>
+
+    </style>
+    <div style="width:800px">
+        <table>
+            <tr>
+                <img style="height:20px" src="https://vcantech.github.io/alterego/img/with-regards.png" alt="">
+            </tr>
+            <tr>
+                <td style="    border: 0px solid #fff;">
+
+                    <table>
+                        <!-- <tr style="height: 0;"></tr>
+                        <tr>
+                            <td style="    border: 0px solid #fff;">
+                                <img style="height:25px" src="https://vcantech.github.io/alterego/img/with-regards.png" alt="">
+                            </td>
+                        </tr> -->
+                        <tr>
+                            <td style="    border: 0px solid #fff;">
+                                <a href="https://alterego-technology.com/" target="_blank "> <img style="height:124px" src="https://vcantech.github.io/alterego/img/logo.png" alt=" "></a>
+                            </td>
+                        </tr>
+
+                    </table>
+                </td>
+
+                <td style=" border: 0px solid #fff;padding: 0 15px; ">
+                    <p style="margin: 0;"><img style="height:25px " src="https://vcantech.github.io/alterego/img/nidhi-fadiya/nidhi-fadiya.png" alt=" "></p>
+                    <p style="margin: 0;"><img style="height:16px " src="https://vcantech.github.io/alterego/img/nidhi-fadiya/nidhi-fadiya-d.png" alt=" "></p>
+                    <p style="margin: 0;"><img style="width: 365px;padding: 5px 0;" src="https://vcantech.github.io/alterego/img/hr-line.png" alt=" "></p>
+                    <p style="margin: 0; width: 365px;">
+                        <img style="height: 15px;" src="https://vcantech.github.io/alterego/img/call.png" alt=" ">
+                        <a style="text-decoration: none;" href="tel:+916352301319"><img style="height: 12px;" src="https://vcantech.github.io/alterego/img/nidhi-fadiya/nidhi-fadiya-no.png" alt=" "></a>
+                        <img style="height: 15px;" src="https://vcantech.github.io/alterego/img/v-line.png" alt=" ">
+                        <img style="height: 15px;" src="https://vcantech.github.io/alterego/img/telephone.png" alt=" ">
+                        <a style="text-decoration: none;" href="tel:+917948413356"><img style="height: 12px;" src="https://vcantech.github.io/alterego/img/telephone-number.png" alt=" "></a>
+                        <img style="height: 20px;padding: 5px 0 0 0 ;" src="https://vcantech.github.io/alterego/img/member.png" alt=" ">
+                        <img style="height: 16px;" src="https://vcantech.github.io/alterego/img/country.png" alt=" ">
+                    </p>
+                    <p style="margin: 0;">
+
+                    </p>
+
+                </td>
+
+                <td style=" border: 0px solid #fff; ">
+
+                    <img style="height:130px " src="https://vcantech.github.io/alterego/img/gptw.png" alt=" ">
+                </td>
+            </tr>
+        </table>
+    </div>
+</body>
+
+</html>
