--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title></title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,700;0,800;0,900;1,400&family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 
@@ -16,55 +16,99 @@
     <style>
 
     </style>
-    <div style="width:800px">
-        <table>
-            <tr>
-                <img style="height:20px" src="https://vcantech.github.io/mathello-sign/img/with-regards.png" alt="">
-            </tr>
-            <tr>
-                <td style="    border: 0px solid #fff;">
+    <div style="width:850px">
+        <table class="table">
 
-                    <table>
-                        <!-- <tr style="height: 0;"></tr>
-                        <tr>
-                            <td style="    border: 0px solid #fff;">
-                                <img style="height:25px" src="https://vcantech.github.io/alterego/img/with-regards.png" alt="">
-                            </td>
-                        </tr> -->
-                        <tr>
-                            <td style="    border: 0px solid #fff;">
-                                <a href="https://alterego-technology.com/" target="_blank "> <img style="height:124px" src="https://vcantech.github.io/alterego/img/logo.png" alt=" "></a>
-                            </td>
-                        </tr>
+            <tbody>
+                <tr>
+                    <td> <img style="height:20px" src="https://vcantech.github.io/mathello-sign/img/with-regards.png" alt=""></td>
 
-                    </table>
-                </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div>
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <tr>
+                                                <td><span style="font-family: 'Poppins', sans-serif;font-weight: 900;font-size: 25px; color: #3B3389;">Sreenevas KM Iyenger</span>
+                                                    <span style="font-family: 'Quicksand', sans-serif;font-weight: bold;font-size: 18px; color: #3B3389;">Global Education Director</span>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <div>
+                                                        <table>
+                                                            <tr>
+                                                                <td>
+                                                                    <span>
+                                                                    <a href="tel:+971507783228" style="font-size: 16px;text-decoration: none;margin-right: 10px; font-weight: 700;font-family: 'Quicksand', sans-serif;color: #575757;">
+                                                                        <svg xmlns="http://www.w3.org/2000/svg" style="margin-right: 5px;" height="18px" viewBox="0 0 22.62 33.94" fill="#4969b1" fill-rule="evenodd";><defs></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M19.23,0H3.39A3.38,3.38,0,0,0,0,3.39V30.54a3.4,3.4,0,0,0,3.39,3.4H19.23a3.4,3.4,0,0,0,3.39-3.4V3.39a3.38,3.38,0,0,0-1-2.4A3.42,3.42,0,0,0,19.23,0ZM9.07,12.83a1.33,1.33,0,0,0-1.88,0l-.63.63a3.11,3.11,0,0,0,0,4.38l5,5a3.11,3.11,0,0,0,4.38,0l.63-.63a1.33,1.33,0,0,0,0-1.88l-.94-.94a.89.89,0,0,0-1.25,0l-.63.63a.85.85,0,0,1-.62.26.88.88,0,0,1-.63-.26L9.38,16.9a.88.88,0,0,1-.26-.63.85.85,0,0,1,.26-.62L10,15a.89.89,0,0,0,0-1.25ZM8.36,2.26l.37,1.13h5.16l.38-1.13Z"/></g></g></svg>+971 50 778 3228</a>
+                                                                    </span>
+                                                                </td>
+                                                                <td>
+                                                                    <a href="tel:+971507783228" style="font-size: 16px;text-decoration: none;font-weight: 700;font-family: 'Quicksand', sans-serif;color: #575757;">
 
-                <td style=" border: 0px solid #fff;padding: 0 15px; ">
-                    <p style="margin: 0;"><img style="height:25px " src="https://vcantech.github.io/alterego/img/nidhi-fadiya/nidhi-fadiya.png" alt=" "></p>
-                    <p style="margin: 0;"><img style="height:16px " src="https://vcantech.github.io/alterego/img/nidhi-fadiya/nidhi-fadiya-d.png" alt=" "></p>
-                    <p style="margin: 0;"><img style="width: 365px;padding: 5px 0;" src="https://vcantech.github.io/alterego/img/hr-line.png" alt=" "></p>
-                    <p style="margin: 0; width: 365px;">
-                        <img style="height: 15px;" src="https://vcantech.github.io/alterego/img/call.png" alt=" ">
-                        <a style="text-decoration: none;" href="tel:+916352301319"><img style="height: 12px;" src="https://vcantech.github.io/alterego/img/nidhi-fadiya/nidhi-fadiya-no.png" alt=" "></a>
-                        <img style="height: 15px;" src="https://vcantech.github.io/alterego/img/v-line.png" alt=" ">
-                        <img style="height: 15px;" src="https://vcantech.github.io/alterego/img/telephone.png" alt=" ">
-                        <a style="text-decoration: none;" href="tel:+917948413356"><img style="height: 12px;" src="https://vcantech.github.io/alterego/img/telephone-number.png" alt=" "></a>
-                        <img style="height: 20px;padding: 5px 0 0 0 ;" src="https://vcantech.github.io/alterego/img/member.png" alt=" ">
-                        <img style="height: 16px;" src="https://vcantech.github.io/alterego/img/country.png" alt=" ">
-                    </p>
-                    <p style="margin: 0;">
 
-                    </p>
+                                                                        <svg xmlns="http://www.w3.org/2000/svg" style="margin-right: 5px;" height="18px" viewBox="0 0 32.76 32.76"><defs><style></style></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><g id="Layer_2-2" data-name="Layer 2"><g id="_09.whatsapp" data-name=" 09.whatsapp"><circle id="background" class="cls-1" fill="#29a71a" cx="16.38" cy="16.38" r="16.38"/><g id="icon"><path class="cls-2" fill="#fff" d="M23.6,9.16A10.16,10.16,0,0,0,7.33,20.91L6.25,26.14a.4.4,0,0,0,.06.3.39.39,0,0,0,.42.16l5.13-1.21A10.15,10.15,0,0,0,23.6,9.16ZM22,21.92a8,8,0,0,1-9.16,1.49l-.71-.36L9,23.8v0l.65-3.17-.35-.69A8,8,0,0,1,22,10.67l0,.05A7.94,7.94,0,0,1,22,21.92Z"/><path class="cls-2" fill="#fff"  d="M21.72,19.6A3.27,3.27,0,0,1,20,21.13c-1.34.32-3.39,0-6-2.37l0,0c-2.25-2.09-2.84-3.83-2.7-5.2a3.3,3.3,0,0,1,1.28-1.95.72.72,0,0,1,1,.08.57.57,0,0,1,.12.18l.82,1.86a.73.73,0,0,1-.09.75L14,15a.71.71,0,0,0-.06.8,7.83,7.83,0,0,0,1.42,1.58,8.5,8.5,0,0,0,2,1.41.71.71,0,0,0,.78-.17l.48-.49a.77.77,0,0,1,.73-.18l2,.56a.74.74,0,0,1,.49.93.65.65,0,0,1-.08.17Z"/></g></g></g></g></g></svg>+971
+                                                                        50 983 4557</a>
 
-                </td>
+                                                                </td>
+                                                            </tr>
+                                                        </table>
+                                                    </div>
+                                                </td>
+                                            </tr>
 
-                <td style=" border: 0px solid #fff; ">
 
-                    <img style="height:130px " src="https://vcantech.github.io/alterego/img/gptw.png" alt=" ">
-                </td>
-            </tr>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </td>
+                    <td>
+                        <img src="https://vcantech.github.io/mathello-sign/img/arrow-design.svg" style="height: 70px;" alt="">
+                    </td>
+                    <td style="border-radius: 1px solid black;">
+                        <a href="#"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo-line.png" alt="" style="height: 80px;"></a>
+                    </td>
+                    <td>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <span><a href="#">
+                                            <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#039be5" d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z"/><path fill="#fff" d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"/></svg></a></span>
+                                        <span><a href="#">
+                                            <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#039be5" d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z"/><path fill="#fff" d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"/></svg></a></span>
+                                        <span><a href="#">
+                                            <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#039be5" d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z"/><path fill="#fff" d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"/></svg></a></span>
+                                        <span><a href="#">
+                                            <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#039be5" d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z"/><path fill="#fff" d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"/></svg></a></span>
+                                        <span><a href="#">
+                                            <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#039be5" d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z"/><path fill="#fff" d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"/></svg></a></span>
+                                    </td>
+
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <span style="font-size: 20px; color: #575757;font-family: 'Quicksand', sans-serif;font-weight: 700;">@mathellogenius</span>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+
+
+                <tr>
+                    <td>website</td>
+                </tr>
+            </tbody>
         </table>
+
     </div>
 </body>
 
