--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <style>
 
     </style>
-    <div style="width:850px">
+    <div style="width:800px">
         <table class="table">
 
             <tbody>
@@ -32,10 +32,16 @@
                                     <tr>
                                         <td>
                                             <tr>
-                                                <td><span style="font-family: 'Poppins', sans-serif;font-weight: 900;font-size: 25px; color: #3B3389;">Sreenevas KM Iyenger</span>
+                                                <td><span style="font-family: 'Poppins', sans-serif;font-weight: 900;font-size: 25px; color: #3B3389;">Sreenevas KM Iyenger</span> <br>
                                                     <span style="font-family: 'Quicksand', sans-serif;font-weight: bold;font-size: 18px; color: #3B3389;">Global Education Director</span>
                                                 </td>
                                             </tr>
+                                            <tr></tr>
+                                            <tr></tr>
+                                            <tr></tr>
+                                            <tr></tr>
+                                            <tr></tr>
+                                            <tr></tr>
                                             <tr>
                                                 <td>
                                                     <div>
@@ -43,16 +49,15 @@
                                                             <tr>
                                                                 <td>
                                                                     <span>
-                                                                    <a href="tel:+971507783228" style="font-size: 16px;text-decoration: none;margin-right: 10px; font-weight: 700;font-family: 'Quicksand', sans-serif;color: #575757;">
-                                                                        <svg xmlns="http://www.w3.org/2000/svg" style="margin-right: 5px;" height="18px" viewBox="0 0 22.62 33.94" fill="#4969b1" fill-rule="evenodd";><defs></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M19.23,0H3.39A3.38,3.38,0,0,0,0,3.39V30.54a3.4,3.4,0,0,0,3.39,3.4H19.23a3.4,3.4,0,0,0,3.39-3.4V3.39a3.38,3.38,0,0,0-1-2.4A3.42,3.42,0,0,0,19.23,0ZM9.07,12.83a1.33,1.33,0,0,0-1.88,0l-.63.63a3.11,3.11,0,0,0,0,4.38l5,5a3.11,3.11,0,0,0,4.38,0l.63-.63a1.33,1.33,0,0,0,0-1.88l-.94-.94a.89.89,0,0,0-1.25,0l-.63.63a.85.85,0,0,1-.62.26.88.88,0,0,1-.63-.26L9.38,16.9a.88.88,0,0,1-.26-.63.85.85,0,0,1,.26-.62L10,15a.89.89,0,0,0,0-1.25ZM8.36,2.26l.37,1.13h5.16l.38-1.13Z"/></g></g></svg>+971 50 778 3228</a>
+                                                                    <a href="tel:+971507783228" style="font-size: 15px;text-decoration: none;margin-right: 10px; font-weight: 700;font-family: 'Quicksand', sans-serif;color: #575757;">
+                                                                      <img src="https://vcantech.github.io/mathello-sign/img/phone.png" style="height: 16px;" alt=""> +971 50 778 3228</a>
                                                                     </span>
                                                                 </td>
                                                                 <td>
-                                                                    <a href="tel:+971507783228" style="font-size: 16px;text-decoration: none;font-weight: 700;font-family: 'Quicksand', sans-serif;color: #575757;">
+                                                                    <a href="tel:+971507783228" style="font-size: 15px;text-decoration: none;font-weight: 700;font-family: 'Quicksand', sans-serif;color: #575757;">
 
 
-                                                                        <svg xmlns="http://www.w3.org/2000/svg" style="margin-right: 5px;" height="18px" viewBox="0 0 32.76 32.76"><defs><style></style></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><g id="Layer_2-2" data-name="Layer 2"><g id="_09.whatsapp" data-name=" 09.whatsapp"><circle id="background" class="cls-1" fill="#29a71a" cx="16.38" cy="16.38" r="16.38"/><g id="icon"><path class="cls-2" fill="#fff" d="M23.6,9.16A10.16,10.16,0,0,0,7.33,20.91L6.25,26.14a.4.4,0,0,0,.06.3.39.39,0,0,0,.42.16l5.13-1.21A10.15,10.15,0,0,0,23.6,9.16ZM22,21.92a8,8,0,0,1-9.16,1.49l-.71-.36L9,23.8v0l.65-3.17-.35-.69A8,8,0,0,1,22,10.67l0,.05A7.94,7.94,0,0,1,22,21.92Z"/><path class="cls-2" fill="#fff"  d="M21.72,19.6A3.27,3.27,0,0,1,20,21.13c-1.34.32-3.39,0-6-2.37l0,0c-2.25-2.09-2.84-3.83-2.7-5.2a3.3,3.3,0,0,1,1.28-1.95.72.72,0,0,1,1,.08.57.57,0,0,1,.12.18l.82,1.86a.73.73,0,0,1-.09.75L14,15a.71.71,0,0,0-.06.8,7.83,7.83,0,0,0,1.42,1.58,8.5,8.5,0,0,0,2,1.41.71.71,0,0,0,.78-.17l.48-.49a.77.77,0,0,1,.73-.18l2,.56a.74.74,0,0,1,.49.93.65.65,0,0,1-.08.17Z"/></g></g></g></g></g></svg>+971
-                                                                        50 983 4557</a>
+                                                                        <img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 16px;" alt=""> +971 50 983 4557</a>
 
                                                                 </td>
                                                             </tr>
@@ -80,21 +85,21 @@
                                 <tr>
                                     <td>
                                         <span><a href="#">
-                                            <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#039be5" d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z"/><path fill="#fff" d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"/></svg></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height: 24px;"></a></span>
                                         <span><a href="#">
-                                            <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#039be5" d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z"/><path fill="#fff" d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"/></svg></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height: 24px;"></a></span>
                                         <span><a href="#">
-                                            <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#039be5" d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z"/><path fill="#fff" d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"/></svg></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height: 24px;"></a></span>
                                         <span><a href="#">
-                                            <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#039be5" d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z"/><path fill="#fff" d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"/></svg></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height: 24px;"></a></span>
                                         <span><a href="#">
-                                            <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#039be5" d="M24 5A19 19 0 1 0 24 43A19 19 0 1 0 24 5Z"/><path fill="#fff" d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"/></svg></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height: 24px;"></a></span>
                                     </td>
 
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span style="font-size: 20px; color: #575757;font-family: 'Quicksand', sans-serif;font-weight: 700;">@mathellogenius</span>
+                                        <span style="font-size: 18px; color: #575757;font-family: 'Quicksand', sans-serif;font-weight: 700;">@mathellogenius</span>
                                     </td>
                                 </tr>
                             </tbody>
@@ -104,11 +109,40 @@
 
 
                 <tr>
-                    <td>website</td>
+                    <td>
+                        <div>
+
+                        </div>
+                        <!-- <div style="background: linear-gradient(45deg, #7260BF,#15AD9B); border-radius: 3px; padding: 3px;">
+                            <span>
+                            <a href="mailto:hello@mathellogenius.com"  style="font-size: 16px;text-decoration: none;margin-right: 10px; font-weight: 700;font-family: 'Quicksand', sans-serif;color: #fff;"><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 20px;" alt=""> hello@mathellogenius.com</a>
+                             </span>
+
+                        </div> -->
+                    </td>
+
                 </tr>
             </tbody>
         </table>
+        <div style="background: linear-gradient(45deg, #7260BF,#15AD9B); border-radius: 3px; padding: 3px;">
+            <table>
+                <tbody>
+                    <tr>
+                        <td>
+                            <span>
+                            <a href="mailto:hello@mathellogenius.com"  style="font-size: 18px;text-decoration: none;margin-right: 10px; font-weight: 700;font-family: 'Quicksand', sans-serif;color: #fff;"><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 18px;" alt=""> hello@mathellogenius.com</a>
+                             </span>
+                        </td>
+                        <td>
+                            <span>
+                            <a href="www.mathellogenius.com"  target="_blank" style="font-size: 18px;text-decoration: none;margin-right: 10px; font-weight: 700;font-family: 'Quicksand', sans-serif;color: #fff;"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 18px;" alt=""> www.mathellogenius.com</a>
+                        </span>
 
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </body>
 
