--- a/index copy.html
+++ b/index copy.html
@@ -32,10 +32,15 @@
                                     <tr>
                                         <td>
                                             <tr>
-                                                <td><span style="font-family: 'Poppins', sans-serif;font-weight: 700;font-size: 25px; color: #3B3389;">Sreenevas KM Iyenger</span> <br>
+                                                <td><span style="font-family: 'Poppins', sans-serif;font-weight: 900;font-size: 25px; color: #3B3389;">Sreenevas KM Iyenger</span> <br>
                                                     <span style="font-family: 'Quicksand', sans-serif;font-weight: bold;font-size: 18px; color: #3B3389;">Global Education Director</span>
                                                 </td>
                                             </tr>
+                                            <tr></tr>
+                                            <tr></tr>
+                                            <tr></tr>
+                                            <tr></tr>
+                                            <tr></tr>
                                             <tr></tr>
                                             <tr>
                                                 <td>
@@ -69,7 +74,7 @@
                         </div>
                     </td>
                     <td>
-                        <img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 70px;" alt="">
+                        <img src="https://vcantech.github.io/mathello-sign/img/arrow-design.svg" style="height: 70px;" alt="">
                     </td>
                     <td style="border-radius: 1px solid black;">
                         <a href="#"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo-line.png" alt="" style="height: 80px;"></a>
@@ -119,25 +124,21 @@
                 </tr>
             </tbody>
         </table>
-        <div style="background: linear-gradient(45deg, #7260BF,#15AD9B); border-radius: 3px; padding: 0px 0 0 3px;height: 38px;">
+        <div style="background: linear-gradient(45deg, #7260BF,#15AD9B); border-radius: 3px; padding: 3px;">
             <table>
                 <tbody>
                     <tr>
                         <td>
                             <span>
-                            <a href="mailto:hello@mathellogenius.com"  style="margin-right: 10px;"><img src="./img/email.png" style="height: 23px;" alt=""></a>
+                            <a href="mailto:hello@mathellogenius.com"  style="font-size: 18px;text-decoration: none;margin-right: 10px; font-weight: 700;font-family: 'Quicksand', sans-serif;color: #fff;"><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 18px;" alt=""> hello@mathellogenius.com</a>
                              </span>
                         </td>
                         <td>
                             <span>
-                            <a href="https://mathellogenius.com"  target="_blank" ><img src="./img/website.png" style="height: 23px;" alt=""></a>
+                            <a href="www.mathellogenius.com"  target="_blank" style="font-size: 18px;text-decoration: none;margin-right: 10px; font-weight: 700;font-family: 'Quicksand', sans-serif;color: #fff;"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 18px;" alt=""> www.mathellogenius.com</a>
                         </span>
 
                         </td>
-
-                        <td><span>
-                            <img src="./img/color-box.png" height="31.7px;" alt="">
-                        </span></td>
                     </tr>
                 </tbody>
             </table>
