--- a/index.html
+++ b/index.html
@@ -125,18 +125,18 @@
                     <tr>
                         <td>
                             <span>
-                            <a href="mailto:hello@mathellogenius.com"  style="margin-right: 10px;"><img src="./img/email.png" style="height: 23px;" alt=""></a>
+                            <a href="mailto:hello@mathellogenius.com"  style="margin-right: 10px;"><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 23px;" alt=""></a>
                              </span>
                         </td>
                         <td>
                             <span>
-                            <a href="https://mathellogenius.com"  target="_blank" ><img src="./img/website.png" style="height: 23px;" alt=""></a>
+                            <a href="https://mathellogenius.com"  target="_blank" ><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 23px;" alt=""></a>
                         </span>
 
                         </td>
 
                         <td><span>
-                            <img src="./img/color-box.png" height="31.7px;" alt="">
+                            <img src="https://vcantech.github.io/mathello-sign/img/color-box.png" height="31.7px;" alt="">
                         </span></td>
                     </tr>
                 </tbody>
