--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                                                     </span>
                                                                 </td>
                                                                 <td>
-                                                                    <a href="tel:+971507783228" style="font-size: 15px;text-decoration: none;font-weight: 700;font-family: 'Quicksand', sans-serif;color: #575757;">
+                                                                    <a href="https://wa.me/971507783228" style="font-size: 15px;text-decoration: none;font-weight: 700;font-family: 'Quicksand', sans-serif;color: #575757;">
 
 
                                                                         <img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 16px;" alt=""> +971 50 983 4557</a>
