--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                                     <tr>
                                         <td>
                                             <tr>
-                                                <td><span style="font-family: 'Poppins', sans-serif;font-weight: 700;font-size: 25px; color: #3B3389;">Sreenevas KM Iyenger</span> <br>
-                                                    <span style="font-family: 'Quicksand', sans-serif;font-weight: bold;font-size: 18px; color: #3B3389;">Global Education Director</span>
+                                                <td><span style="font-family: 'Poppins', sans-serif;font-weight: 700;font-size: 22px; color: #3B3389;">Sreenevas KM Iyenger</span> <br>
+                                                    <span style="font-family: 'Quicksand', sans-serif;font-weight: bold;font-size: 15px; color: #3B3389;">Global Education Director</span>
                                                 </td>
                                             </tr>
                                             <tr></tr>
@@ -44,15 +44,15 @@
                                                             <tr>
                                                                 <td>
                                                                     <span>
-                                                                    <a href="tel:+971507783228" style="font-size: 15px;text-decoration: none;margin-right: 10px; font-weight: 700;font-family: 'Quicksand', sans-serif;color: #575757;">
-                                                                      <img src="https://vcantech.github.io/mathello-sign/img/phone.png" style="height: 16px;" alt=""> +971 50 778 3228</a>
+                                                                    <a href="tel:+971507783228" style="font-size: 14px;text-decoration: none;margin-right: 5px; font-weight: 700;font-family: 'Quicksand', sans-serif;color: #575757;">
+                                                                      <img src="https://vcantech.github.io/mathello-sign/img/phone.png" style="height: 15px;" alt=""> +971 50 778 3228</a>
                                                                     </span>
                                                                 </td>
                                                                 <td>
-                                                                    <a href="https://wa.me/971507783228" style="font-size: 15px;text-decoration: none;font-weight: 700;font-family: 'Quicksand', sans-serif;color: #575757;">
+                                                                    <a href="https://wa.me/971507783228" style="font-size: 14px;text-decoration: none;font-weight: 700;font-family: 'Quicksand', sans-serif;color: #575757;">
 
 
-                                                                        <img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 16px;" alt=""> +971 50 983 4557</a>
+                                                                        <img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 15px;" alt=""> +971 50 983 4557</a>
 
                                                                 </td>
                                                             </tr>
@@ -69,10 +69,10 @@
                         </div>
                     </td>
                     <td>
-                        <img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 70px;" alt="">
+                        <img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 65px;" alt="">
                     </td>
                     <td style="border-radius: 1px solid black;">
-                        <a href="#"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo-line.png" alt="" style="height: 80px;"></a>
+                        <a href="#"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo-line.png" alt="" style="height: 70px;"></a>
                     </td>
                     <td>
                         <table>
@@ -80,21 +80,21 @@
                                 <tr>
                                     <td>
                                         <span><a href="#">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height: 24px;"></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height: 22px;"></a></span>
                                         <span><a href="#">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height: 24px;"></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height: 22px;"></a></span>
                                         <span><a href="#">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height: 24px;"></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height: 22px;"></a></span>
                                         <span><a href="#">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height: 24px;"></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height: 22px;"></a></span>
                                         <span><a href="#">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height: 24px;"></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height: 22px;"></a></span>
                                     </td>
 
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span style="font-size: 18px; color: #575757;font-family: 'Quicksand', sans-serif;font-weight: 700;">@mathellogenius</span>
+                                        <span style="font-size: 16px; color: #575757;font-family: 'Quicksand', sans-serif;font-weight: 700;">@mathellogenius</span>
                                     </td>
                                 </tr>
                             </tbody>
@@ -119,24 +119,24 @@
                 </tr>
             </tbody>
         </table>
-        <div style="background: linear-gradient(45deg, #7260BF,#15AD9B); border-radius: 3px; padding: 0px 0 0 3px;height: 38px;">
+        <div style="background: linear-gradient(45deg, #7260BF,#15AD9B); border-radius: 3px; padding: 0px 0 0 3px;height: 39px;width: 715px;">
             <table>
                 <tbody>
                     <tr>
                         <td>
                             <span>
-                            <a href="mailto:hello@mathellogenius.com"  style="margin-right: 10px;"><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 23px;" alt=""></a>
+                            <a href="mailto:hello@mathellogenius.com"  style="margin-right: 5px;"><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 19px;" alt=""></a>
                              </span>
                         </td>
                         <td>
                             <span>
-                            <a href="https://mathellogenius.com"  target="_blank" ><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 23px;" alt=""></a>
+                            <a href="https://mathellogenius.com"  target="_blank" ><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 19px;" alt=""></a>
                         </span>
 
                         </td>
 
                         <td><span>
-                            <img src="https://vcantech.github.io/mathello-sign/img/color-box.png" height="31.7px;" alt="">
+                            <img src="https://vcantech.github.io/mathello-sign/img/color-box.png"  style="    height: 33.2px;" alt="">
                         </span></td>
                     </tr>
                 </tbody>
